# pr-hnsw

./: .gitignore  Makefile  README.md  pyproject.toml
configuraciones/: sintetico_pequeno.yaml
documentos/: acta_investigacion.md  baselines.md  metricas.md  reproducibilidad.md
documentos/corpus/contexto/: README.md
documentos/corpus/principal/: README.md
documentos/corpus/secundario/: README.md
documentos/mineria_cientifica/capitulos/: capitulo_1_planteamiento.json
documentos/mineria_cientifica/papers/principales/: gollapudi2023filtered.json  malkov2020efficient.json  patel2024acorn.json  subramanya2019diskann.json  wang2021comprehensive.json
pruebas/unitarias/: test_placeholder.py
scripts/: ejecutar_experimento.py
tesis/: main.tex
tesis/bibliografia/: referencias.bib
tesis/capitulos/: 01_planteamiento_problema.tex
